--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
@@ -6,4 +6,5 @@
   <Quit>/that's all/that's it/nothing/cancel/back/end/exit/leave/stop/quit</Quit>
   <Refuse>/no/nope/disagree/cancel/I don't want/no need/it will be all</Refuse>
   <Thanks>/thanks/thank you</Thanks>
+  <TweetMsg>/I'm having good time at CES with the visitors!/Good time!/Meeting people is all I love! !#Happiness/Taking a photo of my new friends! !#RobotsLoveHumans/Thanks for passing by!/</TweetMsg>
 </data-set>
