[TAKEPHOTO] fixing canvas (again.... sigh)

--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
@@ -6,5 +6,5 @@
   <Quit>/ce sera tout/rien/retour/annuler/fin/sortir/quitter/arret/arrêter</Quit>
   <Refuse>/non/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
   <Thanks>/merci/je vou remerci</Thanks>
-  <TweetMsg>/Je passe des bons moments au CES avec les visiteurs!/Supers moments! !#Fun/Je rencontre plein de monde, c'est super! !#RobotsLoveHumans/Petite photo avec mes nouveaux amis!/Merci d'être venu me dire bonjour!/</TweetMsg>
+  <TweetMsg>/Je passe des bons moments au CES avec les visiteurs!/Supers moments! #Fun/Je rencontre plein de monde, c'est super! #RobotsLoveHumans/Petite photo avec mes nouveaux amis!/Merci d'être venu me dire bonjour!/</TweetMsg>
 </data-set>
