[TAKEPHOTO] adding centering head

--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
@@ -3,6 +3,8 @@
   <Accept>/got it/okay/agree/understand/understood/very well/understood/sure/confirm/accept/ok/yes/yep/validate/</Accept>
   <AnOther>/another/other</AnOther>
   <DidntUnderstand>/I didn't get it, could you repeat?/Can you repeat please?/ I didn't understand, can you say it again?/Could you repeat?</DidntUnderstand>
+  <Move>Moves/move/rotate/look at me/change/no</Move>
+  <Photo>photo/photos/image/picture/picture/take/yes/go/proceed/next</Photo>
   <Quit>/that's all/that's it/nothing/cancel/back/end/exit/leave/stop/quit</Quit>
   <Refuse>/no/nope/disagree/cancel/I don't want/no need/it will be all</Refuse>
   <Thanks>/thanks/thank you</Thanks>
