--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
@@ -3,6 +3,8 @@
   <Accept>/c'est noté/okay/d'accord/compris/bien/très bien/entendu/fort bien/oui/ok/ouais/valider/validé/confirmer/confirmé/confirme/valide</Accept>
   <AnOther>/Une autre/autre</AnOther>
   <DidntUnderstand>/Je n'ai pas compris. Pouvez vous répéter ?/Pouvez vous répéter s'il vous plait?/ Je n'ai pas bien entendu, pouvez vous reformuler?/Pouvez vous répéter?</DidntUnderstand>
+  <Move>Bouger/bouge/bouges/change de position/tourne/recentrer/recentre/recentré/recentrée/regarde moi/cherche moi/non</Move>
+  <Photo>photo/image/imagesphotos/photographie/oui/ok/</Photo>
   <Quit>/ce sera tout/rien/retour/annuler/fin/sortir/quitter/arret/arrêter</Quit>
   <Refuse>/non/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
   <Thanks>/merci/je vou remerci</Thanks>
