[TAKEPHOTO] Correcting vocal command + Takepose

--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
@@ -3,7 +3,7 @@
   <Accept>/c'est noté/okay/d'accord/compris/bien/très bien/entendu/fort bien/oui/ok/ouais/valider/validé/confirmer/confirmé/confirme/valide</Accept>
   <Again>Encore/même/recommence/refait/refaire/recommencer</Again>
   <AnOther>/Une autre/autre</AnOther>
-  <Back>arrière/recule/reculer/éloigne/éloigner/loin</Back>
+  <Back>arrière/recul/recule/reculer/éloigne/éloigner/loin</Back>
   <DidntUnderstand>/Je n'ai pas compris. Pouvez vous répéter ?/Pouvez vous répéter s'il vous plait?/ Je n'ai pas bien entendu, pouvez vous reformuler?/Pouvez vous répéter?</DidntUnderstand>
   <Down>bas/baisse/descend/descendre/baisser</Down>
   <Forward>avant/avancer/avance/viens/approche/rapprocher/rapproche/proche</Forward>
