[TAKEPHOTO] if face is lost, redo looking for face

--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
@@ -13,7 +13,7 @@
   <Photo>photo/photos/image/picture/picture/take/yes/go/proceed/next</Photo>
   <Quit>/that's all/that's it/nothing/cancel/back/end/exit/leave/stop/quit</Quit>
   <Refuse>/no/nope/disagree/cancel/I don't want/no need/it will be all</Refuse>
-  <Right>right</Right>
+  <Right>right/alright/write</Right>
   <Thanks>/thanks/thank you</Thanks>
   <TweetMsg>/I'm having good time at CES with the visitors!/Good time!/Meeting people is all I love! #Happiness/Taking a photo of my new friends! #RobotsLoveHumans/Thanks for passing by!/</TweetMsg>
   <Up>up/lookup/upper/higher/high/rise/raise</Up>
