--- a/Assets/Memory/Resources/Lang/levelsFr.json
+++ b/Assets/Memory/Resources/Lang/levelsFr.json
@@ -13,8 +13,6 @@
       "introSentence":"C'est parti",
       "events":[
 				3,
-				8,
-				9,
         4,
         0
       ],
@@ -23,20 +21,20 @@
     },
     {
       "speed":1.5,
-      "introSentence":"Allez, on complique un peu lé choses",
+      "introSentence":"Allez, cette fois il faudra aussi bouger ma tête",
       "events":[
         3,
         4,
         4,
         0,
-        3
+        8
       ],
       "successSentence":"bien joué, la suite arrive",
       "failureSentence":"Dommage, c'es perdu. Bien joué kan même."
     },
     {
       "speed":2.0,
-      "introSentence":"Allez, cette fois il faudra aussi bouger mes roues",
+      "introSentence":"Allez, on complique un peu les choses!",
       "events":[
         4,
 				4,
@@ -55,11 +53,12 @@
       "events":[
         4,
         0,
-        4,
+				8,
+				8,
         0,
         3,
-        4,
-        0,
+				4,
+				9,
         3
       ],
       "successSentence":"Bravo, c'es tout bon",
