[TAKEPHOTO] fix head control with button + face reco...

--- a/Assets/TakePose/Resources/Lang/synonymesPoseFR.xml.txt
+++ b/Assets/TakePose/Resources/Lang/synonymesPoseFR.xml.txt
@@ -4,6 +4,6 @@
   <AnOther>/Une autre/autre</AnOther>
   <DidntUnderstand>/Je n'ai pas compris. Pouvez vous répéter ?/Pouvez vous répéter s'il vous plait?/ Je n'ai pas bien entendu, pouvez vous reformuler?/Pouvez vous répéter?</DidntUnderstand>
   <Quit>/ce sera tout/rien/retour/annuler/fin/sortir/quitter/arret/arrêter</Quit>
-  <Refuse>/non/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
+  <Refuse>/non/nom/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
   <Thanks>/merci/je vou remerci</Thanks>
 </data-set>
