--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
@@ -1,6 +1,6 @@
 ﻿<?xml version='1.0' encoding='UTF-8' standalone='yes'?>
 <data-set xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'>
-  <Accept>/c'est noté/okay/d'accord/compris/bien/très bien/entendu/fort bien/oui/ok/ouais/valider/validé/confirmer/confirmé/confirme/valide</Accept>
+  <Accept>/je suis/c'est noté/okay/d'accord/compris/bien/très bien/entendu/fort bien/oui/ok/ouais/valider/validé/confirmer/confirmé/confirme/valide</Accept>
   <Again>Encore/même/recommence/refait/refaire/recommencer</Again>
   <AnOther>/Une autre/autre</AnOther>
   <Back>arrière/recul/recule/reculer/éloigne/éloigner/loin</Back>
@@ -10,9 +10,9 @@
   <Left>gauche</Left>
   <More>Plus</More>
   <Move>Bouger/bouge/bouges/change de position/tourne/recentrer/recentre/recentré/recentrée/regarde moi/cherche moi/non</Move>
-  <Photo>photo/image/imagesphotos/photographie/oui/ok/</Photo>
+  <Photo>photo/image/images/photos/photographie/oui/ok/</Photo>
   <Quit>/ce sera tout/rien/retour/annuler/fin/sortir/quitter/arret/arrêter</Quit>
-  <Refuse>/non/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
+  <Refuse>man/non/nom/note/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
   <Right>droite</Right>
   <Thanks>/merci/je vou remerci</Thanks>
   <TweetMsg>/Je passe des bons moments au CES avec les visiteurs!/Supers moments! #Fun/Je rencontre plein de monde, c'est super! #RobotsLoveHumans/Petite photo avec mes nouveaux amis!/Merci d'être venu me dire bonjour!/</TweetMsg>
