[MEMORY] Adding wheel motion

--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
@@ -15,6 +15,6 @@
   <Refuse>man/non/nom/note/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
   <Right>droite</Right>
   <Thanks>/merci/je vou remerci</Thanks>
-  <TweetMsg>/Je passe des bons moments au CES avec les visiteurs!/Supers moments! #Fun/Je rencontre plein de monde, c'est super! #RobotsLoveHumans/Petite photo avec mes nouveaux amis!/Merci d'être venu me dire bonjour!/</TweetMsg>
+  <TweetMsg>/Je passe des bons moments au CES avec les visiteurs!/Supers moments! #Fun/Je rencontre plein de monde, c'est super! #ILoveHumans/Petite photo avec mon nouvel ami!/Merci d'être venu me dire bonjour!/</TweetMsg>
   <Up>haut/lève/lever/monte/monter</Up>
 </data-set>
