--- a/Assets/Memory/Resources/Lang/levelsEn.json
+++ b/Assets/Memory/Resources/Lang/levelsEn.json
@@ -12,23 +12,20 @@
       "introSentence":"Let's go!",
       "events":[
 				3,
-        4,
-        0
+				0
       ],
       "successSentence":"Nice, let's try an other sequence!",
       "failureSentence":"Too bad, you loose, but it was a nice try"
     },
     {
       "speed":1.5,
-      "introSentence":"This time, you will also have to move my head!",
+      "introSentence":"This time, you will also have to move my body!",
       "events":[
-        4,
-				4,
-				8,
+        3,
+        0,
+        11,
 				0,
-				4,
-				9,
-        3
+				8
       ],
       "successSentence":"Well done!",
       "failureSentence":"Too bad, you failed. You will do better next time!"
@@ -37,15 +34,13 @@
       "speed":2.0,
       "introSentence":"Let's do something a bit harder",
       "events":[
-        4,
-        0,
-				8,
-				8,
-        0,
         3,
+        0,
+        11,
+				0,
+				8,
 				4,
-				9,
-        3
+				10
       ],
       "successSentence":"Well done! You got everything right, you are really good",
       "failureSentence":"You loose but you did a good job!"
@@ -54,14 +49,16 @@
       "speed":3.0,
       "introSentence":"Last level, give it all you got",
       "events":[
-        4,
-        0,
-        4,
-        0,
         3,
-        4,
         0,
-        3
+        11,
+				0,
+				8,
+				4,
+				10,
+				8,
+				4,
+				11
       ],
       "successSentence":"Perfect! You are truly a champion!",
       "failureSentence":"Too bad, you loose. But you were very close!"
