--- a/Assets/Memory/Resources/Lang/levelsFr.json
+++ b/Assets/Memory/Resources/Lang/levelsFr.json
@@ -13,7 +13,6 @@
       "introSentence":"C'est parti",
       "events":[
 				3,
-        4,
         0
       ],
       "successSentence":"Bravo, on passe au niveau suivant",
@@ -21,13 +20,13 @@
     },
     {
       "speed":1.5,
-      "introSentence":"Allez, cette fois il faudra aussi bouger ma tête",
+      "introSentence":"Allez, cette fois il faudra aussi bouger mon corps",
       "events":[
         3,
-        4,
-        4,
         0,
-        8
+        11,
+				0,
+				8
       ],
       "successSentence":"bien joué, la suite arrive",
       "failureSentence":"Dommage, c'es perdu. Bien joué kan même."
@@ -36,13 +35,13 @@
       "speed":2.0,
       "introSentence":"Allez, on complique un peu les choses!",
       "events":[
+        3,
         4,
-				4,
+        0,
 				8,
 				0,
-				4,
-				9,
-        3
+				10,
+				9
       ],
       "successSentence":"Bravo, c'est tout bon",
       "failureSentence":"Dommage, c'es perdu. Bien joué kan même."
@@ -51,15 +50,15 @@
       "speed":3.0,
       "introSentence":"Niveau final, il faut tou donné maintenant !",
       "events":[
+        3,
         4,
         0,
 				8,
-				8,
-        0,
-        3,
-				4,
+				0,
+				10,
 				9,
-        3
+				0,
+				11
       ],
       "successSentence":"Bravo, c'es tout bon",
       "failureSentence":"Dommage, c'es perdu. Bien joué kan même."
