--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoEN.xml.txt
@@ -9,12 +9,12 @@
   <Forward>forward/closer/close/front/come</Forward>
   <Left>left</Left>
   <More>More</More>
-  <Move>Moves/move/rotate/look at me/change/no</Move>
+  <Move>Moves/movers/move/rotate/look at me/change/movie/first/roofers/</Move>
   <Photo>photo/photos/image/picture/picture/take/yes/go/proceed/next</Photo>
   <Quit>/that's all/that's it/nothing/cancel/back/end/exit/leave/stop/quit</Quit>
   <Refuse>/no/know/now/nope/disagree/cancel/I don't want/no need/it will be all</Refuse>
   <Right>right/alright/write</Right>
   <Thanks>/thanks/thank you</Thanks>
-  <TweetMsg>/I'm having good time at CES with the visitors!/Good time!/Meeting people is all I love! #Happiness/Taking a photo of my new friends! #RobotsLoveHumans/Thanks for passing by!/</TweetMsg>
+  <TweetMsg>/I'm having good time at CES with the visitors!/Good time!/Meeting people is all I love! #Happiness/Taking a photo of my new friend! #ILoveHumans/Thanks for passing by!/</TweetMsg>
   <Up>up/lookup/upper/higher/high/rise/raise</Up>
   </data-set>
