--- a/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
+++ b/Assets/TakePhoto/Resources/Lang/synonymesPhotoFR.xml.txt
@@ -13,7 +13,7 @@
   <Photo>photo/image/images/photos/photographie/oui/ok/</Photo>
   <Quit>/ce sera tout/rien/retour/annuler/fin/sortir/quitter/arret/arrêter</Quit>
   <Refuse>man/non/nom/note/nan/pa d'accord/annuler/nope/je ne veux pa/ça n'est pa la peine/ce n'est pa la peine/ce n'est pa nécessaire/ça ira</Refuse>
-  <Right>droite</Right>
+  <Right>droite/droit</Right>
   <Thanks>/merci/je vou remerci</Thanks>
   <TweetMsg>/Je passe des bons moments au CES avec les visiteurs!/Supers moments! #Fun/Je rencontre plein de monde, c'est super! #ILoveHumans/Petite photo avec mon nouvel ami!/Merci d'être venu me dire bonjour!/</TweetMsg>
   <Up>haut/lève/lever/monte/monter</Up>
